Wird diese Option deaktivert, wird der normale WYSIWYG Editor Style geladen.
- Aus sicherheits- und benutzerfreundlichen Gründen wird nun standardmässig jeder Text der in den
WYSIWYG Editor kopiert wird, als Plaintext eingefügt. (FCKConfig.ForcePasteAsPlainText = true;)

Allgemein
- Neue Platzhalter für Datumsfragmente:
  DATE_YEAR, DATE_MONTH, DATE_DAY, DATE_TIME

Content Manager
- Der CSS-Name und das "target" für Navigationslinks können nun auch an Unterseiten vererbt werden.
- Editeren einer Seite in mehreren Sprachen auf einmal
- Vorschau-Funktion

Benutzerverwaltung
- Beim Erfassen eines neuen Benutzerkontos kann automatisch eine persönliche
  Kategorie beim Digital Asset Management Modul erstellt werden.
- Das Aktualisierungsintervall der Benutzersitzungen in der Datenbank
  kann definiert werden.
- Bei der Auflistung der Benutzer wird der Link 'zum Adressbuch hinzufügen'
  nur dann angezeigt, sofern der jeweilige Benutzer nicht bereits im Adressbuch
  enthalten ist.
- Für jede Benutzergruppe kann eine Homepage definiert werden, auf welche sich
  die dazugehörigen Benutzer nach erfolgreicher Authentifizierung laden
  sollen.
- Für jeden Benutzer kann eine primäre Benutzergruppe definiert werden.
- Der Platzhalter [[ACCESS_USER_PRIMARY_GROUP]] gibt den Namen der primären
  Benutzergruppe aus.
- Die Registrierungsmaske kann optional um ein CAPTCHA erweitert werden.
- Die Registrierungsmaske kann optional um die Aufforderung der AGB's zu
  Akzeptieren erweitert werden.
- Mit dem neuen Platzhalter [[USER_COUNT]] kann die Anzahl Mitglieder
  in der index.html des Layouts ausgegeben werden.
- Profil Eigenschaften vom Typ Auswahlmenü können als Pflichtfeld definiert
  werden.
- Die Profil Eigenschaften Geschlecht, Anrede, Land und Webseite werden nur
  aufgelistet, sofern eine Option ausgewählt wurde.

Korrespondierende Mehrsprachigkeit
- Auch bei mehreren Sprachen haben alle Seiten die gleiche ID

Modul: Digital Asset Management